Updated index js file removed line importing react. Was causing component not to load on page.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fruity Slots</title>
+    <script src="https://unpkg.com/react/umd/react.development.js" defer></script>
+    <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" defer></script>
+    <script src="https://unpkg.com/babel-standalone" defer></script>
+    <script src="Hello.js" type="text/jsx" defer></script>
+    <script src="index.js" type="text/jsx" defer></script>
+    <title>Props Demo</title>
 </head>
 <body>
     <div id="root"></div>
