--- a/index.html
+++ b/index.html
@@ -6,9 +6,8 @@
     <script src="https://unpkg.com/react/umd/react.development.js" defer></script>
     <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" defer></script>
     <script src="https://unpkg.com/babel-standalone" defer></script>
-    <script src="Hello.js" type="text/jsx" defer></script>
     <script src="index.js" type="text/jsx" defer></script>
-    <title>Props Demo</title>
+    <title>Fruity Slots</title>
 </head>
 <body>
     <div id="root"></div>
