--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <script src="https://unpkg.com/react/umd/react.development.js" defer></script>
     <script src="https://unpkg.com/react-dom/umd/react-dom.development.js" defer></script>
     <script src="https://unpkg.com/babel-standalone" defer></script>
-    <script src="/components/Slot.js" type="text/jsx" defer></script>
-    <script src="/components/SlotMachine.js" type="text/jsx" defer></script>
+    <script src="/components/Slot.jsx" type="text/jsx" defer></script>
+    <script src="/components/SlotMachine.jsx" type="text/jsx" defer></script>
     <script src="index.js" type="text/jsx" defer></script>
     <title>Fruity Slots</title>
 </head>
