Created main css file for app styles.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="/components/Slot.jsx" type="text/jsx" defer></script>
     <script src="/components/SlotMachine.jsx" type="text/jsx" defer></script>
     <script src="index.js" type="text/jsx" defer></script>
+    <link rel="stylesheet" href="main.css">
     <title>Fruity Slots</title>
 </head>
 <body>
